# HuanRenderer

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
assets/HelloTriangle/: simple_triangle.frag
assets/Shaders/DepthBuffer/: shader.frag
assets/Shaders/ModelsLoad/: shader.frag  shader.vert  shader.vert.spv
assets/Shaders/SimpleTex/: shader.frag.spv  shader.vert  shader.vert.spv
assets/UniformBuffer/: shader.vert  shader.vert.spv
huan/: CMakeLists.txt
huan/include/huan/: HelloTriangleApplication.hpp  VulkanContext.hpp  common.hpp  settings.hpp
huan/include/huan/backend/: shader.hpp  swapchain.hpp  vulkan_buffer.hpp  vulkan_command.hpp  vulkan_command_pool.hpp  vulkan_image.hpp  vulkan_render_frame.hpp  vulkan_resources.hpp
huan/include/huan/backend/resource/: allocated.hpp  image_view.hpp  resource_system.hpp  sampler.hpp  vulkan_allocated.hpp  vulkan_buffer.hpp  vulkan_builder_base.hpp  vulkan_image.hpp  vulkan_image_view.hpp  vulkan_resource.hpp  vulkan_resources.hpp
huan/include/huan/backend/shader/: glsl_compiler.hpp  spirv_reflection.hpp
huan/include/huan/common_templates/: deferred_system.hpp
huan/include/huan/framework/: component.hpp  node.hpp  scene.hpp
huan/include/huan/framework/components/: material.hpp  sub_mesh.hpp  texture.hpp
huan/include/huan/log/: Log.hpp
huan/include/huan/scene_framework/: component.hpp  node.hpp  scene.hpp  script.hpp
huan/include/huan/scene_framework/components/: AABB3D.hpp  material.hpp  mesh.hpp  sub_mesh.hpp  texture.hpp
huan/include/huan/utils/: file_load.hpp  file_system.hpp
huan/src/: HelloTriangleApplication.cpp  VulkanContext.cpp  settings.cpp
huan/src/backend/: VulkanContext.cpp  shader.cpp  swapchain.cpp  vma_volkUsage.cpp  vulkan_buffer.cpp  vulkan_command.cpp  vulkan_command_pool.cpp  vulkan_image.cpp  vulkan_render_frame.cpp  vulkan_resources.cpp
huan/src/backend/resource/: image_view.cpp  resource_system.cpp  sampler.cpp  vulkan_buffer.cpp  vulkan_image.cpp  vulkan_image_view.cpp  vulkan_resources.cpp
huan/src/backend/shader/: glsl_compiler.cpp  spirv_reflection.cpp
huan/src/framework/: component.cpp  node.cpp  scene.cpp  script.cpp
huan/src/framework/components/: AABB3D.cpp  material.cpp  mesh.cpp  sub_mesh.cpp  texture.cpp
huan/src/log/: Log.cpp
huan/src/utils/: file_load.cpp  file_system.cpp  stb_image.cpp  tiny_obj_loader_usage.cpp
renderer/: .clang-format  .gitignore  CMakeLists.txt
renderer/core/: CMakeLists.txt
renderer/core/include/huan/core/: application.hpp  config.hpp  create_info.hpp  renderer.hpp  renderer_context.hpp
renderer/core/include/huan/platform/vulkan/: vulkan_api.hpp  vulkan_command_buffer.hpp  vulkan_command_pool.hpp  vulkan_context.hpp  vulkan_device.hpp  vulkan_framebuffer.hpp  vulkan_pipeline.hpp  vulkan_renderpass.hpp  vulkan_surface.hpp  vulkan_swapchain.hpp
renderer/core/include/huan/window/: window.hpp
renderer/core/src/huan/core/: application.cpp  renderer.cpp  renderer_context.cpp
renderer/core/src/huan/platform/vulkan/: vulkan_api.cpp  vulkan_command_buffer.cpp  vulkan_command_pool.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_framebuffer.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp
renderer/sandbox/: CMakeLists.txt
renderer/sandbox/test1/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt
sandbox/triangle1/: CMakeLists.txt  main.cpp
